# Xungungo2

./: .gitignore  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run.py  test_yfinance_screen.py
.claude/: settings.local.json
.github/workflows/: build-installer.yml
Xungungo/: README.md  requirements.txt  run.py
Xungungo/xungungo/: app.py
Xungungo/xungungo/bridge/: __init__.py  chart_bridge.py
Xungungo/xungungo/controllers/: __init__.py  ticker_controller.py
Xungungo/xungungo/core/: logger.py  models.py  navigation.py
Xungungo/xungungo/data/: __init__.py  datasource_base.py  normalize.py  yfinance_source.py
Xungungo/xungungo/indicators/: __init__.py  base.py  kalman.py  manager.py
Xungungo/xungungo/ui/qml/: Main.qml
Xungungo/xungungo/ui/web/: chart.js  index.html  qwebchannel.js  (+1 more)
installer/: setup-env.bat  xungungo.bat  xungungo.iss
xungungo/: ARQUITECTURE.md  app.py
xungungo/bridge/: chart_bridge.py
xungungo/controllers/: analysis_controller.py  realtime_controller.py  search_controller.py  settings_controller.py  tab_manager.py  ticker_controller.py
xungungo/core/: logger.py  models.py  navigation.py
xungungo/data/: datasource_base.py  normalize.py  yahoo_search.py  yfinance_source.py
xungungo/data/realtime/: __init__.py  base.py  bitmex.py  nasdaq.py  yahoo_realtime.py
xungungo/indicators/: README.md  base.py  bollinger.py  fibonacci.py  kalman.py  manager.py  td_sequential.py
xungungo/ui/qml/: Main.qml
xungungo/ui/web/: advanced_renderer.js  advanced_renderer.legacy.js  chart.js  index.html
(+22 files in other folders)
