[project]
name = "xungungo"
version = "0.1.0"
description = "Desktop app PySide6/QML + LightweightCharts + indicator plugins"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.5",
  "pandas>=2.0",
  "numpy>=1.23",
  "yfinance>=0.2.28",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
